--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
     
     <section>
-        <h1>что бы сюда добавить?</h1>
+        <h1><i>создатель сайта совершенно не винноват в своих действиях.</i></h1>
     </section>
 
     <footer>
