--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         <h1>Готовые Домашние Задания</h1>
     </header>
 
+<img src="odds/emoji.png">
+
     <section>
         <h2>Здарова!</h2>
         <button><a href="templatest/byology.html">Биология</a></button>
