--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h1>Готовые Домашние Задания</h1>
     </header>
 
-<img src="odds/emoji.png">
+<img src="odds/emoji.png"> <h1>test</h1>
 
     <section>
         <h2>Здарова!</h2>
