--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <img src="odds/emoji.png"> <h1>test</h1>
 
     <section>
+        <img src="odds/emoji.png">
         <h2>Здарова!</h2>
         <button><a href="templatest/byology.html">Биология</a></button>
         <button><a href="templatest/english.html">Английский</a></button> 
