--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
             background-color: #2980b9;
             border-color: #2980b9;
         }
+
+        @media (max-width: 1000px) {
+
+            .title {
+                font-size: 50px;
+            }
+        }
     </style>
 </head>
 <body>
