--- a/index.html
+++ b/index.html
@@ -97,8 +97,12 @@
     </section>
     
     <section>
-        <h1><i>создатель сайта совершенно не винноват в своих действиях.</i></h1>
+        <h1><i>создатель сайта совершенно не виновен за ваши действия.</i></h1>
     </section>
+
+
+    <p><strong>By Ocidn or Ocid</strong></p>
+    
 
     <footer>
         <p>&copy; Готовые Домашние Задания - ГДЗ 2023</p>
