--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </section>
 
 
-    <p><strong>By Ocidn or Ocid</strong></p>
+    <br><br><br><br><br><br><p><strong>By Ocidn or Ocid</strong></p>
     
 
     <footer>
