--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     </section>
     
     <section>
-        <h1><i>создатель сайта совершенно не виновен за ваши действия.</i></h1>
+        <h1><i>создатель сайта не несет ответственности за ваши дейсвия.</i></h1>
     </section>
 
 
-    <br><br><br><br><br><br><p><strong>By Ocidn or Ocid</strong></p>
+    <br><br><br><br><br><br><br><br><br><br><br><br><p><strong>By Ocidn or Ocid</strong></p>
     
 
     <footer>
