--- a/templatest/byology.html
+++ b/templatest/byology.html
@@ -78,6 +78,7 @@
         <button> <a href="../index.html">Домой</a> </button>
     </section>
     
+    <h1 style="text-align: center">номер - ???</h1>
     <h1 style="text-align: center">Решение #1</h1>
     <img src="../cards/byology/1.png" width="300" height="300" style="display: block; margin: 0 auto;">
     <h1 style="text-align: center">Решение #2</h1>
