--- a/templatest/music.html
+++ b/templatest/music.html
@@ -78,7 +78,8 @@
         <p>(тут могут быть разные ответы, но постарайтесь не копировать у друг друга)</p>
         <button> <a href="../index.html">Домой</a> </button>
     </section>
-    
+
+    <h1 style="text-align: center">номер - ???</h1>
     <h1 style="text-align: center">Решение #1</h1>
     <img src="../cards/music/1.png" width="300" height="300" style="display: block; margin: 0 auto;">
     <h1 style="text-align: center">Решение #2</h1>
